Completed unit tests